Fixed minor CSS issue where chart <div> was overlapping neighboring content.

--- a/app/styles/_charts.scss
+++ b/app/styles/_charts.scss
@@ -1,5 +1,6 @@
 .nxg-doughnut-chart-nested {
   position: relative;
+  display: inline-block;
 }
 .nxg-doughnut-chart-outer {
 }
